--- a/paguyuban-privacy.html
+++ b/paguyuban-privacy.html
@@ -76,6 +76,7 @@
       <ul>
         <li>Email: <a href="mailto:hallo@kunci.co.id">hallo@kunci.co.id</a></li>
       </ul>
+      <p>Untuk menghapus akun Anda, silakan kirim permintaan penghapusan ke email <a href="mailto:hallo@kunci.co.id">hallo@kunci.co.id</a> dengan subjek <em>Permintaan Hapus Akun</em> dan sertakan informasi akun Anda untuk verifikasi.</p>
     </section>
 
     <footer>
