Revise title and enhance biometric data section
Updated the title and added biometric data usage details.

--- a/paguyuban-privacy.html
+++ b/paguyuban-privacy.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Privacy Policy — Kunci – Paguyuban Pasundan</title>
+  <title>Privacy Policy — Kunci – Pasundan Connect</title>
   <style>
     :root{--bg:#f7f7fb;--card:#fff;--muted:#6b7280;--accent:#d22b2b}
     body{font-family:Inter, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial; background:var(--bg); color:#111; margin:0; padding:32px}
@@ -37,6 +37,8 @@
         <li><strong>Access Wi‑Fi State &amp; Change Wi‑Fi State</strong> — Untuk mendeteksi dan melakukan koneksi ke jaringan Wi‑Fi resmi Paguyuban Pasundan.</li>
         <li><strong>Access Fine Location</strong> — Hanya digunakan untuk menentukan kedekatan Anda dengan titik akses Wi‑Fi yang tersedia agar koneksi dapat berjalan dengan benar. Kami tidak menyimpan riwayat lokasi Anda atau melakukan pelacakan lokasi jangka panjang.</li>
       </ul>
+      <p><strong>Data Biometrik (Face Recognition)</strong> — Untuk fitur presensi/kehadiran, aplikasi dapat mengumpulkan data fitur wajah Anda dalam bentuk <em>face embeddings</em>. Data ini bukan foto mentah, melainkan representasi numerik terenkripsi dari ciri wajah Anda yang digunakan untuk verifikasi identitas.</p>
+      <p>Kami tidak menyimpan foto wajah asli dan tidak menggunakan data biometrik ini untuk tujuan selain verifikasi kehadiran.</p>
     </section>
 
     <section>
@@ -46,7 +48,10 @@
         <li>Menghubungkan Anda ke jaringan Wi‑Fi resmi Paguyuban Pasundan.</li>
         <li>Mengelola dan memvalidasi akun keanggotaan Anda.</li>
         <li>Meningkatkan pengalaman konektivitas dan fitur akses jaringan pada aplikasi.</li>
+        <li>Melakukan verifikasi identitas anggota menggunakan data biometrik untuk fitur presensi/kehadiran.</li>
       </ul>
+      <p>Data biometrik yang dikumpulkan hanya digunakan untuk proses identifikasi kehadiran. Kami tidak pernah menggunakan, menjual, atau membagikan data wajah kepada pihak ketiga.</p>
+      <p>Data biometrik disimpan secara aman di server internal organisasi dan akan dihapus permanen ketika akun Anda dihapus atau dinonaktifkan.</p>
       <p>Kami tidak menjual, menyewakan, atau membagikan informasi pribadi Anda kepada pihak ketiga untuk tujuan pemasaran.</p>
     </section>
 
