--- a/paguyuban-privacy.html
+++ b/paguyuban-privacy.html
@@ -85,7 +85,7 @@
     </section>
 
     <footer>
-      <p>Terakhir diperbarui: <strong>01 Agustus 2025</strong></p>
+      <p>Terakhir diperbarui: <strong>01 Desember 2025</strong></p>
     </footer>
   </main>
 </body>
