--- a/paguyuban-privacy.html
+++ b/paguyuban-privacy.html
@@ -24,7 +24,7 @@
     <header>
       <span class="badge">Kunci – Paguyuban Pasundan</span>
       <h1>Privacy Policy</h1>
-      <p class="lead">Effective Date: <strong>01 Agustus 2025</strong></p>
+      <p class="lead">Effective Date: <strong>01 Desember 2025</strong></p>
       <p class="meta">Dokumen ini menjelaskan bagaimana aplikasi <strong>Kunci – Paguyuban Pasundan</strong> mengumpulkan dan menggunakan data melalui izin perangkat yang diperlukan untuk fungsionalitas aplikasi.</p>
     </header>
 
@@ -57,7 +57,11 @@
 
     <section>
       <h2>3. Keamanan Data</h2>
-      <p>Kami menerapkan langkah‑langkah wajar untuk melindungi informasi yang diproses melalui aplikasi dari akses, pengungkapan, perubahan, atau perusakan yang tidak sah. Namun, tidak ada sistem yang sepenuhnya kebal terhadap risiko — jika terjadi insiden keamanan, kami akan menindaklanjuti sesuai aturan yang berlaku.</p>
+      <p>Kami menerapkan langkah-langkah wajar untuk melindungi semua informasi yang diproses melalui aplikasi, termasuk data biometrik seperti <em>face embeddings</em>, dari akses, penggunaan, pengungkapan, perubahan, atau perusakan yang tidak sah.</p>
+
+      <p>Data biometrik disimpan di server internal organisasi dengan enkripsi dan kontrol akses terbatas. Kami tidak menyimpan foto wajah asli dan tidak membagikan data biometrik kepada pihak ketiga.</p>
+
+      <p>Meskipun kami berupaya menjaga keamanan data dengan standar terbaik yang wajar, tidak ada sistem yang sepenuhnya kebal terhadap risiko. Jika terjadi insiden keamanan yang melibatkan data pribadi atau data biometrik, kami akan mengambil tindakan yang diperlukan sesuai dengan peraturan yang berlaku.</p>
     </section>
 
     <section>
@@ -72,7 +76,11 @@
 
     <section>
       <h2>6. Perubahan pada Kebijakan Privasi</h2>
-      <p>Kami dapat memperbarui kebijakan ini dari waktu ke waktu. Perubahan akan dipublikasikan di aplikasi dan versi terbaru akan memuat <em>Effective Date</em> yang diperbarui.</p>
+      <p>Kami dapat memperbarui kebijakan privasi ini dari waktu ke waktu untuk mencerminkan perubahan pada fitur aplikasi, termasuk jika terdapat penyesuaian terkait pengumpulan atau penggunaan data biometrik.</p>
+
+      <p>Setiap perubahan material yang memengaruhi cara kami mengumpulkan, menggunakan, atau menyimpan data, termasuk data wajah untuk verifikasi kehadiran, akan diberitahukan melalui pembaruan pada aplikasi atau melalui informasi yang tersedia bagi pengguna.</p>
+
+      <p>Versi terbaru dari kebijakan privasi selalu ditandai dengan <em>Effective Date</em> yang diperbarui.</p>
     </section>
 
     <section>
