Update branding from Paguyuban Pasundan to Pasundan Connect

--- a/paguyuban-privacy.html
+++ b/paguyuban-privacy.html
@@ -22,10 +22,10 @@
 <body>
   <main class="container">
     <header>
-      <span class="badge">Kunci – Paguyuban Pasundan</span>
+      <span class="badge">Kunci – Pasundan Connect</span>
       <h1>Privacy Policy</h1>
       <p class="lead">Effective Date: <strong>01 Desember 2025</strong></p>
-      <p class="meta">Dokumen ini menjelaskan bagaimana aplikasi <strong>Kunci – Paguyuban Pasundan</strong> mengumpulkan dan menggunakan data melalui izin perangkat yang diperlukan untuk fungsionalitas aplikasi.</p>
+      <p class="meta">Dokumen ini menjelaskan bagaimana aplikasi <strong>Kunci – Pasundan Connect</strong> mengumpulkan dan menggunakan data melalui izin perangkat yang diperlukan untuk fungsionalitas aplikasi.</p>
     </header>
 
     <section>
@@ -33,8 +33,8 @@
       <p>Aplikasi ini tidak mengumpulkan atau menyimpan informasi pribadi yang dapat diidentifikasi kecuali bila Anda secara sukarela memberikan data untuk keperluan pendaftaran keanggotaan.</p>
       <p>Aplikasi mungkin meminta izin perangkat berikut untuk memberikan layanan yang diperlukan:</p>
       <ul>
-        <li><strong>Internet</strong> — Untuk terhubung ke layanan Paguyuban Pasundan dan memverifikasi data keanggotaan.</li>
-        <li><strong>Access Wi‑Fi State &amp; Change Wi‑Fi State</strong> — Untuk mendeteksi dan melakukan koneksi ke jaringan Wi‑Fi resmi Paguyuban Pasundan.</li>
+        <li><strong>Internet</strong> — Untuk terhubung ke layanan Pasundan Connect dan memverifikasi data keanggotaan.</li>
+        <li><strong>Access Wi‑Fi State &amp; Change Wi‑Fi State</strong> — Untuk mendeteksi dan melakukan koneksi ke jaringan Wi‑Fi resmi Pasundan Connect.</li>
         <li><strong>Access Fine Location</strong> — Hanya digunakan untuk menentukan kedekatan Anda dengan titik akses Wi‑Fi yang tersedia agar koneksi dapat berjalan dengan benar. Kami tidak menyimpan riwayat lokasi Anda atau melakukan pelacakan lokasi jangka panjang.</li>
       </ul>
       <p><strong>Data Biometrik (Face Recognition)</strong> — Untuk fitur presensi/kehadiran, aplikasi dapat mengumpulkan data fitur wajah Anda dalam bentuk <em>face embeddings</em>. Data ini bukan foto mentah, melainkan representasi numerik terenkripsi dari ciri wajah Anda yang digunakan untuk verifikasi identitas.</p>
@@ -45,7 +45,7 @@
       <h2>2. Bagaimana Kami Menggunakan Informasi</h2>
       <p>Data yang disediakan melalui izin di atas digunakan semata‑mata untuk tujuan berikut:</p>
       <ul>
-        <li>Menghubungkan Anda ke jaringan Wi‑Fi resmi Paguyuban Pasundan.</li>
+        <li>Menghubungkan Anda ke jaringan Wi‑Fi resmi Pasundan Connect.</li>
         <li>Mengelola dan memvalidasi akun keanggotaan Anda.</li>
         <li>Meningkatkan pengalaman konektivitas dan fitur akses jaringan pada aplikasi.</li>
         <li>Melakukan verifikasi identitas anggota menggunakan data biometrik untuk fitur presensi/kehadiran.</li>
@@ -71,7 +71,7 @@
 
     <section>
       <h2>5. Privasi Anak</h2>
-      <p>Aplikasi ini ditujukan untuk anggota Paguyuban Pasundan dan tidak ditujukan khusus untuk anak‑anak di bawah usia 13 tahun tanpa persetujuan orang tua. Jika Anda adalah orang tua atau wali dan mengetahui bahwa anak Anda telah memberikan data tanpa izin, hubungi kami untuk meminta penghapusan.</p>
+      <p>Aplikasi ini ditujukan untuk anggota Pasundan Connect dan tidak ditujukan khusus untuk anak‑anak di bawah usia 13 tahun tanpa persetujuan orang tua. Jika Anda adalah orang tua atau wali dan mengetahui bahwa anak Anda telah memberikan data tanpa izin, hubungi kami untuk meminta penghapusan.</p>
     </section>
 
     <section>
