--- a/paguyuban-privacy.html
+++ b/paguyuban-privacy.html
@@ -61,6 +61,12 @@
 
       <p>Data biometrik disimpan di server internal organisasi dengan enkripsi dan kontrol akses terbatas. Kami tidak menyimpan foto wajah asli dan tidak membagikan data biometrik kepada pihak ketiga.</p>
 
+<p><strong>Masa Penyimpanan Data Wajah</strong> — Data biometrik wajah (face embeddings) disimpan untuk jangka waktu terbatas, yaitu <strong>maksimal 30 (tiga puluh) hari</strong> sejak terakhir kali data tersebut digunakan untuk proses presensi.</p>
+
+<p>Penyimpanan selama 30 hari ini diperlukan untuk mendukung proses verifikasi kehadiran, audit internal, serta penyelesaian potensi sengketa data presensi. Setelah periode tersebut berakhir, data biometrik wajah akan <strong>dihapus secara otomatis dan permanen</strong> dari sistem kami.</p>
+
+<p>Kami tidak menyimpan data wajah secara permanen atau tanpa batas waktu.</p>
+
       <p>Meskipun kami berupaya menjaga keamanan data dengan standar terbaik yang wajar, tidak ada sistem yang sepenuhnya kebal terhadap risiko. Jika terjadi insiden keamanan yang melibatkan data pribadi atau data biometrik, kami akan mengambil tindakan yang diperlukan sesuai dengan peraturan yang berlaku.</p>
     </section>
 
@@ -77,6 +83,8 @@
     <section>
       <h2>6. Perubahan pada Kebijakan Privasi</h2>
       <p>Kami dapat memperbarui kebijakan privasi ini dari waktu ke waktu untuk mencerminkan perubahan pada fitur aplikasi, termasuk jika terdapat penyesuaian terkait pengumpulan atau penggunaan data biometrik.</p>
+
+<p>Kami tidak pernah menyimpan data biometrik wajah secara permanen, dan seluruh data tersebut tunduk pada kebijakan masa simpan maksimal 30 hari.</p>
 
       <p>Setiap perubahan material yang memengaruhi cara kami mengumpulkan, menggunakan, atau menyimpan data, termasuk data wajah untuk verifikasi kehadiran, akan diberitahukan melalui pembaruan pada aplikasi atau melalui informasi yang tersedia bagi pengguna.</p>
 
